# VetQwen

./: .gitignore  README.md  implementation_plan.md  pyproject.toml  requirements-demo.txt  requirements.txt
app/: gradio_demo.py
configs/: train_default.yaml
data/: dataset_card.md
docs/: project-overview.md
scripts/: _remote_common.sh  build_dataset.py  build_dataset_remote.sh  build_review_subset.py  checks_remote.sh  compare_remote.sh  compare_results.py  evaluate.py  evaluate_remote.sh  generate_synthetic.py  generate_synthetic_remote.sh  judge_utils.py  preflight.py  run_judge.py  run_judge_remote.sh  train.py  train_remote.sh
scripts/vetqwen_core/: __init__.py  constants.py  inference.py  jsonl.py  records.py  response_parsing.py  text.py
tests/: test_build_dataset.py  test_build_review_subset.py  test_compare_results.py  test_evaluate.py  test_generate_synthetic.py
