[project]
name = "vetqwen"
version = "0.1.0"
description = "Remote-first QLoRA research pipeline for structured veterinary differential diagnosis."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "accelerate==0.33.0",
    "numpy>=1.26.0",
    "peft==0.12.0",
    "PyYAML>=6.0",
    "requests>=2.32.0",
    "torch==2.4.1 ; sys_platform == 'darwin'",
    "torch==2.4.1+cu121 ; sys_platform == 'linux'",
    "transformers==4.44.2",
]

[dependency-groups]
demo = [
    "gradio>=4.40.0",
]
research = [
    "bert-score>=0.3.13",
    "bitsandbytes==0.43.3 ; sys_platform == 'linux'",
    "datasets>=2.20.0",
    "rich>=13.7.0",
    "rouge-score>=0.1.2",
    "sentence-transformers>=3.0.0",
    "tensorboard>=2.17.0",
    "trl==0.9.6",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
